# TradingAgents

./: AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: test_analyze.py
tests/: test_forex_signal_engine.py
tradingagents/agents/: __init__.py  forex.py
tradingagents/api/: app.py  cli.py
tradingagents/domain/: __init__.py  schemas.py
tradingagents/graph/: __init__.py  forex_graph.py
tradingagents/indicators/: __init__.py  forex.py
tradingagents/services/: __init__.py  data.py
