[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forex-ai-signal-engine"
version = "1.0.0"
description = "Forex AI multi-agent signal engine for ICT/SMC trading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.4.8",
    "pydantic>=2.11.0",
    "setuptools>=80.9.0",
    "typing-extensions>=4.14.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
forex-signal-engine = "tradingagents.api.cli:main"

[tool.setuptools.packages.find]
include = ["tradingagents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
